[IMP] rectification quelque code in front

--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -9,11 +9,12 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" sizes="76x76" href="%PUBLIC_URL%/apple-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Iteam-$ stats</title>
+    <title>iTeam-$ statistique</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
 </head>
 
 <body class="text-blueGray-700 antialiased">
+    
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 </body>
